// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should handle props 1`] = `
<Avatar
  bgColor="additional-teal"
  imageUrl="www.images.com"
  size={40}
  style={
    Object {
      "clipPath": "url(#fake-id)",
    }
  }
  textColor="basic-white"
  title="Hello World"
>
  <div
    className="root size-40 color__basic-white"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": undefined,
        "--avatar-color-opacity": 1,
        "clipPath": "url(#fake-id)",
      }
    }
  >
    <img
      alt=""
      className="layer image"
      onError={[Function]}
      src="www.images.com"
    />
    <div
      className="layer image-overlay"
    />
  </div>
</Avatar>
`;

exports[`<Avatar /> should handle props 2`] = `
<Avatar
  bgColor="additional-teal"
  imageUrl="www.images.com"
  monogram="WH"
  size={40}
  style={
    Object {
      "clipPath": "url(#fake-id)",
    }
  }
  textColor="basic-white"
  title="Hello World"
>
  <div
    className="root size-40 color__basic-white"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": undefined,
        "--avatar-color-opacity": 1,
        "clipPath": "url(#fake-id)",
      }
    }
  >
    <img
      alt=""
      className="layer image"
      onError={[Function]}
      src="www.images.com"
    />
    <div
      className="layer image-overlay"
    />
  </div>
</Avatar>
`;

exports[`<Avatar /> should handle props 3`] = `
<Avatar
  bgColor="additional-teal"
  color="#f0f"
  imageUrl="www.images.com"
  monogram="WH"
  size={40}
  style={
    Object {
      "clipPath": "url(#fake-id)",
    }
  }
  textColor="basic-white"
  title="Hello World"
>
  <div
    className="root size-40 color__basic-white"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": undefined,
        "--avatar-color-opacity": 1,
        "clipPath": "url(#fake-id)",
      }
    }
  >
    <img
      alt=""
      className="layer image"
      onError={[Function]}
      src="www.images.com"
    />
    <div
      className="layer image-overlay"
    />
  </div>
</Avatar>
`;

exports[`<Avatar /> should handle wrong size 1`] = `
<Avatar
  size={49.92}
  title="Jason"
>
  <div
    className="root size-72 color__basic-gray87"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": "#f5f5f5",
        "--avatar-color-opacity": 1,
      }
    }
  >
    <span
      className="monogram"
    >
      J
    </span>
  </div>
</Avatar>
`;

exports[`<Avatar /> should render without image 1`] = `
<Avatar
  size={40}
  title="Hello World"
>
  <div
    className="root size-40 color__basic-gray87"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": "#f5f5f5",
        "--avatar-color-opacity": 1,
      }
    }
  >
    <span
      className="monogram"
    >
      WH
    </span>
  </div>
</Avatar>
`;

exports[`<Avatar /> should render without image and title 1`] = `
<Avatar
  size={64}
>
  <div
    className="root size-64 color__basic-gray87"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": "#f5f5f5",
        "--avatar-color-opacity": 1,
      }
    }
  >
    <ForwardRef(PersonSVG)
      className="icon"
      fill="#212121"
      height={24}
      width={24}
    >
      <svg
        className="icon"
        fill="#212121"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M6.936 14.149a1 1 0 01-.585 1.287c-1.69.634-2.512 1.774-2.93 2.765a5.66 5.66 0 00-.37 1.305 4.584 4.584 0 00-.05.482V20.009l.005.085c.007.08.02.19.048.315.055.248.142.451.248.578A1.088 1.088 0 003.47 21H20.53a1.088 1.088 0 00.168-.013c.106-.127.193-.33.248-.578a2.473 2.473 0 00.053-.4V19.988a4.575 4.575 0 00-.05-.481 5.66 5.66 0 00-.37-1.306c-.418-.99-1.24-2.13-2.93-2.765a1 1 0 01.702-1.872c2.31.866 3.488 2.476 4.07 3.86.289.685.432 1.313.504 1.773a6.581 6.581 0 01.073.725l.002.05V20L22 20l1 .001v.03a2.904 2.904 0 01-.013.236 4.49 4.49 0 01-.088.573c-.095.431-.306 1.074-.806 1.584-.51.518-1.181.576-1.563.576H3.47c-.382 0-1.053-.058-1.562-.576-.501-.51-.712-1.153-.807-1.584a4.474 4.474 0 01-.1-.809v-.019L1 20.005v-.003S1 20 2 20l-1-.001V19.972a3.002 3.002 0 01.01-.216 7.662 7.662 0 01.568-2.331c.583-1.385 1.761-2.995 4.07-3.861a1 1 0 011.288.585z"
        />
        <path
          clipRule="evenodd"
          d="M12 3C9.878 3 8 4.923 8 7.5S9.878 12 12 12s4-1.923 4-4.5S14.122 3 12 3zM6 7.5C6 4.002 8.599 1 12 1s6 3.002 6 6.5-2.599 6.5-6 6.5-6-3.002-6-6.5z"
          fillRule="evenodd"
        />
      </svg>
    </ForwardRef(PersonSVG)>
  </div>
</Avatar>
`;

exports[`<Avatar /> should renders without props 1`] = `
<Avatar>
  <div
    className="root size-72 color__basic-gray87"
    data-testid="avatar"
    style={
      Object {
        "--avatar-color": "#f5f5f5",
        "--avatar-color-opacity": 1,
      }
    }
  >
    <ForwardRef(PersonSVG)
      className="icon"
      fill="#212121"
      height={24}
      width={24}
    >
      <svg
        className="icon"
        fill="#212121"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M6.936 14.149a1 1 0 01-.585 1.287c-1.69.634-2.512 1.774-2.93 2.765a5.66 5.66 0 00-.37 1.305 4.584 4.584 0 00-.05.482V20.009l.005.085c.007.08.02.19.048.315.055.248.142.451.248.578A1.088 1.088 0 003.47 21H20.53a1.088 1.088 0 00.168-.013c.106-.127.193-.33.248-.578a2.473 2.473 0 00.053-.4V19.988a4.575 4.575 0 00-.05-.481 5.66 5.66 0 00-.37-1.306c-.418-.99-1.24-2.13-2.93-2.765a1 1 0 01.702-1.872c2.31.866 3.488 2.476 4.07 3.86.289.685.432 1.313.504 1.773a6.581 6.581 0 01.073.725l.002.05V20L22 20l1 .001v.03a2.904 2.904 0 01-.013.236 4.49 4.49 0 01-.088.573c-.095.431-.306 1.074-.806 1.584-.51.518-1.181.576-1.563.576H3.47c-.382 0-1.053-.058-1.562-.576-.501-.51-.712-1.153-.807-1.584a4.474 4.474 0 01-.1-.809v-.019L1 20.005v-.003S1 20 2 20l-1-.001V19.972a3.002 3.002 0 01.01-.216 7.662 7.662 0 01.568-2.331c.583-1.385 1.761-2.995 4.07-3.861a1 1 0 011.288.585z"
        />
        <path
          clipRule="evenodd"
          d="M12 3C9.878 3 8 4.923 8 7.5S9.878 12 12 12s4-1.923 4-4.5S14.122 3 12 3zM6 7.5C6 4.002 8.599 1 12 1s6 3.002 6 6.5-2.599 6.5-6 6.5-6-3.002-6-6.5z"
          fillRule="evenodd"
        />
      </svg>
    </ForwardRef(PersonSVG)>
  </div>
</Avatar>
`;
